# biFroSt

./: .gitignore  API documentation.md  README.md
.github/workflows/: build_and_deploy.yml
client/: Cargo.toml
client/remotefs/: Cargo.toml  config.toml
client/remotefs/src/: lib.rs  main.rs
client/remotefs/src/api/: client.rs  client_test.rs  models.rs
client/remotefs/src/cache/: mod.rs
client/remotefs/src/commands/: config.rs  register.rs  start.rs
client/remotefs/src/config/: settings.rs
client/remotefs/src/fs/: attributes.rs  mod.rs  operations.rs  operations_test.rs
client/remotefs/src/util/: auth.rs  fs.rs  mod.rs  path.rs
client/src/: lib.rs  main.rs
client/src/api/: client.rs  client_test.rs  mod.rs  models.rs
client/src/commands/: config.rs  mod.rs  register.rs  start.rs  stop.rs
client/src/config/: settings.rs
client/src/fs/: attributes.rs  mod.rs  operations.rs
client/src/util/: auth.rs  date.rs  fs.rs  path.rs
scripts/: install_bifrost_client.sh  install_bifrost_server.sh
server/: Dockerfile  docker-compose.yml  package-lock.json  package.json
server/src/: app.ts  database.ts  index.ts
server/src/cache/: nonceCache.ts  userCache.ts
server/src/error/: authError.ts  fileError.ts  filesError.ts  userError.ts
server/src/middleware/: authentication.ts  error.ts  validation.ts
server/src/model/: file.ts  user.ts
server/src/router/: filesRouter.ts  sessionRouter.ts  userRouter.ts  usersRouter.ts
server/src/types/: express.d.ts
server/src/utils/: crypto.ts  path.ts
server/src/validation/: envSchema.ts  metadataSchema.ts  userSchema.ts
