[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Borrelli <fra.b0344@gmail.com>, Emanuele Frisi <emanuelefrisi@outlook.com>"]
description = "A remote file system client that mounts remote storage as a local directory"
readme = "README.md"
repository = "https://github.com/bifrost-org/biFroSt"
license = "MIT OR Apache-2.0"

[dependencies]
# FUSE implementation
fuser = "0.12"

# Async runtime and utilities
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line argument parsing
clap = { version = "4.3", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Cache implementation
lru = "0.10"

# Path manipulation
path-clean = "1.0"

# Date/time utilities
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8.23"
libc = "0.2.174"
mockall = "0.13.1"
urlencoding = "2.1.3"
users = "0.11.0"
dirs = "6.0.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
env = "1.0.1"

# Cache
moka = { version = "0.12", features = ["sync"] }
daemonize = "0.5.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.6"
assert_fs = "1.0"
httpmock = "0.6"

[lib]
name = "bifrost"
path = "src/lib.rs"

[[bin]]
name = "bifrost"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Configurazione del server remoto
server_url = "http://localhost"
port = 8080

# Punto di mount del filesystem
mount_point = "/mnt/remotefs"

# Timeout in nanosecondi (chrono::Duration)
# 60 secondi = 60,000,000,000 nanosecondi
timeout = 60000000000

# Configurazione di autenticazione (opzionale)
api_key = "your-api-key-here"
